fixed alignment of header content and resized header name

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,9 @@
 /* Universal Styles */
 
+/* * {
+  outline: 1px solid red !important;
+} */
+
 html {
   font-family: 'Ariel', sans-serif;
   font-size: 24px;
@@ -24,26 +28,32 @@ header {
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
+  align-items: baseline;
 }
 
 header .content {
   display: flex;
-  /* align-items: center; */
-  width: 100%;
-  padding: 1.875;
   margin-top: 0;
 }
 
 header .logo {
   flex: 1;
+  font-size: 24px;
 }
 
-a {
+.content a {
   color: gray;
   text-decoration: none;
+  font-size: 42px;
 }
 
-header .sign-in a {
+header .sign-in-section {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 1.25rem;
+}
+
+.sign-in-section a {
   color: gray;
   text-decoration: none;
   padding-left: 3.5rem;
